src/z80asm/z80asm2/t/30-directive/expected/include_21.txt
% z88dk-z80asm -v -dump-after-directives t/30-directive//input/include_21.asm
Assembling t/30-directive/input/include_21.asm...
t/30-directive/input/include_21.asm:1:8: error: Expected filename after INCLUDE
    include ; no input file
           ^
